done with emp login

--- a/Angularjs/Demo/src/app/app.component.html
+++ b/Angularjs/Demo/src/app/app.component.html
@@ -1,9 +1,19 @@
 <!-- <app-test></app-test> -->
 
-
-
 <!-- <app-test2></app-test2> -->
 
-<!-- <app-login></app-login> -->
+  <!-- <app-login></app-login>  -->
 
-<app-register></app-register>
+  <!-- <app-register></app-register>   -->
+
+ <!-- <app-employee></app-employee>  -->
+
+<!-- <app-showempbyid></app-showempbyid> -->
+
+<!-- <app-products></app-products> -->
+
+<app-header></app-header>
+<br/>
+<marquee><h1 style="color: red;">Welcome to Angular Routing</h1></marquee>
+<br/>
+<router-outlet></router-outlet>
