--- a/Angularjs/Demo/src/app/login/login.component.html
+++ b/Angularjs/Demo/src/app/login/login.component.html
@@ -1,8 +1,47 @@
-Enter EmailId:   <input type="text" name="emailId"   [(ngModel)]="emailId"   /> <br/>
-Enter Password: <input type="password" name="password" [(ngModel)]="password" /><br/><br/>
+<head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+</head>
 
-<button (click) = "buttonSubmit()">Login</button><br/><br/>
+
+<div class="container">
+    <h1>Login Form</h1>
+
+<form #loginForm="ngForm" (ngSubmit)="loginSubmit(loginForm.value)" novalidate>
+    <table>
+        <tr>
+            <td>
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                    <input type="text" class="form-control" name="emailId" ngModel #emailId="ngModel" placeholder="Enter Email-Id" required minlength="2" maxlength="20"/>
+                    <div *ngIf="emailId.errors?.['required'] && emailId.touched" style="color: red;">Please Enter EmailId</div>
+                    <div *ngIf="emailId.errors?.['minlength'] && emailId.touched" style="color: red;">Please Enter Atleast 2 Characters</div>
+                </div>
+                <br/>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                    <input type="password" class="form-control" name="password" ngModel #password="ngModel" placeholder="Enter Password" required minlength="2" maxlength="10"/>
+                    <div *ngIf="password.errors?.['required'] && password.touched" style="color: red;">Please Enter Password</div>
+                    <div *ngIf="password.errors?.['minlength'] && password.touched" style="color: red;">Please Enter Atleast 2 Characters</div>
+
+                </div>
+                <br/>
+            </td>
+        </tr>
+        <tr>
+            <td><button class="btn btn-primary" [disabled]="!loginForm.valid">Login</button></td>
+        </tr>
+    </table>
+</form>
 
 
-EmailId  : {{emailId}}<br/>
-Password : {{password}}<br/>
+<!--<div *ngIf="emailId.errors?.['required'] && emailId.touched" style="color: red;">Please Enter EmailId</div>
+<div *ngIf="password.errors?.['required'] && password.touched" style="color: red;">Please Enter Password</div>
+
+<div *ngIf="emailId.errors?.['minlength'] && emailId.touched" style="color: red;">Please Enter Atleast 2 Characters</div>
+<div *ngIf="password.errors?.['minlength'] && password.touched" style="color: red;">Please Enter Atleast 2 Characters</div>-->
+
+</div>
