--- a/Angularjs/Demo/src/app/register/register.component.html
+++ b/Angularjs/Demo/src/app/register/register.component.html
@@ -1,54 +1,138 @@
-<h1 align="center">Registration Page</h1>
+<head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+</head>
 
-<table align="center">
-    <tr>
-        <td>EmpName</td>
-        <td><input type="text" name="empName" [(ngModel)]="empName" /></td>
-    </tr>
-    <tr>
-        <td>Salary</td>
-        <td><input type="text" name="salary" [(ngModel)]="salary" /></td>
-    </tr>
-    <tr>
-        <td>Gender</td>
-        <td>
-            <select name="gender" [(ngModel)]="gender" >
-                <option value="" selected>Select Gender</option>
-                <option value="Male">Male</option>
-                <option value="Female">Female</option>
-                <option value="Others">Others</option>
-            </select>
-        </td>
-    </tr>
-    
-    <tr>
-        <td>DateOfJoin</td>
-        <td><input type="date" name="doj" [(ngModel)]="doj" /></td>
-    </tr>
-    
-    <tr>
-        <td>Country</td>
-        <td>
-            <select name="country" [(ngModel)]="country" >
-                <option value="" selected>Select Country</option>
-                <option value="IND">INDIA</option>
-                <option value="USA">USA</option>
-                <option value="CAN">Canada</option>
-            </select>
-        </td>
-    </tr>
-    <tr>
-        <td>EmailId</td>
-        <td><input type="text" name="emailId" [(ngModel)]="emailId" /></td>
-    </tr>
-    <tr>
-        <td>Password</td>
-        <td><input type="password" name="password" [(ngModel)]="password" /></td>
-    </tr>
-    <tr>
-        <td></td>
-        <td>
-            <button (click)="submit()">Register</button>
-        </td>
-    </tr>
-</table>
+<div>
+    <h2 align="center">Registration Form</h2>
+
+    <form #registrationForm="ngForm" (ngSubmit)="registerSubmit(registrationForm)">
+        <table align="center">
+            <tr>
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                    <td><input type="text" class="form-control" placeholder="Enter empName" name="empName" ngModel
+                            required /></td>
+                </div>
+                <div *ngIf="registrationForm.controls['empName'].hasError('required') && registrationForm.controls['empName'].touched"
+                    style="color: red;">Please Enter Employee Name</div>
+                <div *ngIf="registrationForm.controls['empName'].hasError('minlength') && registrationForm.controls['empName'].touched"
+                    style="color: red;">Please Enter At Least 2 Characters for Employee Name</div>
+
+            </tr>
+            <tr>
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="fa fa-inr"></i></span>
+                    <td><input type="text" class="form-control" placeholder="Enter salary" name="salary" ngModel
+                            required /></td>
+                </div>
+                <div *ngIf="registrationForm.controls['salary'].hasError('required') && registrationForm.controls['salary'].touched"
+                    style="color: red;">Please Enter Salary</div>
+
+            </tr>
+            <tr>
+
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-menu-down"></i></span>
+
+                    <select name="gender" class="form-control" ngModel required>
+                        <option value="" selected>Select Gender</option>
+                        <option value="Male">Male</option>
+                        <option value="Female">Female</option>
+                        <option value="Others">Others</option>
+                    </select>
+                </div>
+                <div *ngIf="registrationForm.controls['gender'].hasError('required') && registrationForm.controls['gender'].touched"
+                    style="color: red;">Please Select Gender</div>
+
+            </tr>
+            <tr>
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                    <td><input type="date" class="form-control" name="doj" ngModel required /></td>
+                </div>
+                <div *ngIf="registrationForm.controls['doj'].hasError('required') && registrationForm.controls['doj'].touched"
+                    style="color: red;">Please Enter Date of Join</div>
+
+            </tr>
+            <tr>
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-flag"></i></span>
+
+                    <select name="country" class="form-control" ngModel>
+                        <option value="" selected>Select Country</option>
+                        <option value="{{country.cca3}}" *ngFor="let country of countries">{{country.name.common}}
+                        </option>
+
+                    </select>
+                </div>
+            </tr>
+
+            <tr>
+
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+
+                    <input type="text" class="form-control" placeholder="Enter email" name="emailId" ngModel
+                        #emailId="ngModel" required pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}" />
+
+                </div>
+                <div *ngIf="emailId.invalid && (emailId.dirty || emailId.touched)" class="error" style="color: red;">
+                    <div *ngIf="emailId.hasError('required')">Email is required.</div>
+                    <div *ngIf="emailId.hasError('pattern')">Enter a valid email.</div>
+                </div>
+
+            </tr>
+            <tr>
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
+                    <input type="text" class="form-control" placeholder="Enter MobileNo" name="mobileNumber" ngModel
+                        #mobileNumber="ngModel" required pattern="[6789]\d{9}" maxlength="10" />
+
+                </div>
+                <div *ngIf="mobileNumber.invalid && (mobileNumber.dirty || mobileNumber.touched)" class="error"
+                    style="color: red;">
+                    <div *ngIf="mobileNumber.hasError('required')">Mobile Number is required.</div>
+                    <div *ngIf="mobileNumber.hasError('pattern')">Enter a valid 10-digit number starting with 6, 7,
+                        8, or 9.</div>
+                </div>
+            </tr>
+            <tr>
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                    <input type="password" class="form-control" placeholder="Enter password" name="password" ngModel
+                        #password="ngModel" required
+                        pattern="^(?=.[a-z])(?=.[A-Z])(?=.\d)(?=.[@$!%?&])[A-Za-z\d@$!%?&]{8,}$" maxlength="10" />
+
+                </div>
+                <div *ngIf="password.invalid && (password.dirty || password.touched)" class="error" style="color: red;">
+                    <div *ngIf="password.hasError('required')" style="color: red;">Password is required.</div>
+                    <div *ngIf="password.hasError('pattern')" style="color: red;">Password must contain at least 8
+                        characters, including 1 uppercase letter, 1 lowercase letter, 1 digit, and 1 special symbol.
+                    </div>
+                </div>
+                
+            </tr>
+            <tr>
+            <td>
+                <div class="form-group">
+                    <label for="department">Department:</label>
+                    <select name="department" class="form-control" ngModel required>
+                        <option value="" selected>Select Department</option>
+                        <option *ngFor="let dept of departments" [ngValue]="dept">{{ dept.name }}</option>
+                    </select>
+                </div>
+            </td>
+        </tr>
+            <tr>
+                <td class="text-center">
+                    <div>
+                        <button class="btn btn-primary" type="submit" [disabled]="registrationForm.invalid">Register</button>
+                    </div>
+                </td>
+            </tr>
+        </table>
+    </form>
+</div>
