racaptcha validation is done

--- a/Angularjs/Demo/src/app/login/login.component.html
+++ b/Angularjs/Demo/src/app/login/login.component.html
@@ -29,6 +29,14 @@
 
                 </div>
                 <br/>
+                <form [formGroup]="aFormGroup">
+                    <ngx-recaptcha2 #captchaElem
+                      [siteKey]="siteKey"
+                      
+                      formControlName="recaptcha">
+                    </ngx-recaptcha2>
+                  </form>
+
             </td>
         </tr>
         <tr>
