--- a/Angularjs/Demo/src/app/employee/employee.component.html
+++ b/Angularjs/Demo/src/app/employee/employee.component.html
@@ -1,3 +1,10 @@
+<head>
+    <link rel="stylesheet" 
+    href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" 
+    integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" 
+    crossorigin="anonymous">
+</head>
+
 <h3>Welcome {{emailId}}!</h3>
 <h1 align="center">Employees Data</h1>
 <br/>
@@ -13,6 +20,7 @@
                 <th class="bg-info text-white">Country</th>
                 <th class="bg-info text-white">Email-Id</th>
                 <th class="bg-info text-white">Experience</th>
+                <th class="bg-info text-white" colspan="2" align="center">Actions</th>
                 
             </tr>
         </thead>
@@ -26,8 +34,87 @@
                 <td>{{emp.country}}</td>
                 <td>{{emp.emailId}}</td>
                 <td>{{emp.doj | exp }}</td>
-                
-            </tr>
+                <td> <button (click)="editEmployee(emp)" class="glyphicon glyphicon-pencil"></button></td>
+                <td> <button (click)="deleteEmployee(emp.empId)" class="glyphicon glyphicon-trash"></button> </td>
         </tbody>
     </table>
 </div>
+
+<div id="empModal" class="modal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+
+        <div class="modal-header">
+          <h5 class="modal-title">Update Employee</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+
+        <div class="modal-body">
+            <table align="center">
+                <tbody>
+                    <tr>
+                        <td>EmpId</td>
+                        <td><input type="text" name="empId" [(ngModel)]="employee.empId" readonly /></td>
+                    </tr>
+                    <tr>
+                        <td>EmpName</td>
+                        <td><input type="text" name="empName" [(ngModel)]="employee.empName"/></td>
+                    </tr>
+                    <tr>
+                        <td>Salary</td>
+                        <td><input type="text" name="salary" [(ngModel)]="employee.salary" /></td>
+                    </tr>
+                    <tr>
+                        <td>Gender</td>
+                        <td>
+                            <select name="gender" [(ngModel)]="employee.gender">
+                                <option value="{{employee.gender}}" selected>{{employee.gender}}</option>
+                                <option value="Male">Male</option>
+                                <option value="Female">Female</option>
+                                <option value="Others">Others</option>
+                            </select>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>DateOfJoin</td>
+                        <td><input type="date" name="doj" [(ngModel)]="employee.doj" /></td>
+                    </tr>
+                    <tr>
+                        <td>Country</td>
+                        <td>
+                            <select name="country" [(ngModel)]="employee.country">
+                                <option value="{{employee.country}}" selected>{{employee.country}}</option>
+                                <option value="{{country.cca3}}" *ngFor="let country of countries">{{country.name.common}}</option>
+                            </select>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Email-Id</td>
+                        <td><input type="text" name="emailId" [(ngModel)]="employee.emailId"  /></td>
+                    </tr>
+                    <tr>
+                        <td>Password</td>
+                        <td><input type="password" name="password" [(ngModel)]="employee.password" readonly /></td>
+                    </tr>
+                    <tr>
+                        <td>Department</td>
+                        <td>
+                            <select name="deptId" [(ngModel)]="employee.department.deptId">
+                                <option value="" selected>Select Department</option>
+                                <option value="{{dept.deptId}}" *ngFor="let dept of departments">{{dept.deptName}}</option>
+                            </select>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <div class="modal-footer">
+          <button type="button" (click)="updateEmployee()" class="btn btn-secondary" data-dismiss="modal">Update Employee</button>
+        </div>
+
+      </div>
+    </div>
+  </div>
